src/index.css
/* ... */
.btn__menu {
  background-color: transparent;
  font-size: 32px;
  border: none;
  color: #7342d6;
  display: none;
}

.menu__backdrop {
  position: fixed;
  background-color: #242424;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: center;
  visibility: hidden;
  transition: all 300ms ease;
  opacity: 0;
  transform: translate(100%);
}

.menu--open {
  max-height: 100vh;
  overflow: hidden;
}

.menu--open .menu__backdrop {
  visibility: visible;
  opacity: 1;
  transform: translate(0);
}

.menu__links {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.menu__list {
  padding: 32px 0;
}

.menu__link {
  color: white;
  font-size: 40px;
}

.btn__menu--close {
  position: absolute;
  top: 10px;
  right: 20px;
  padding: 8px;
  color: white;
}


/* 

LANDING

*/

#landing {
  background-color: rgba(115, 66, 214, 0.1)
}

.landing {
    display: flex;
    transform: translateY(10px);
}

header {
  height: calc(100vh - 80px);
}

.header__container {
  width: 100%;
  max-width: 720px;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  overflow-x: hidden;
}

.header__description {
  display: flex;
  flex-direction: column;
  align-items: center;
  transform: scale(87%);
}

.header__img--wrapper {
  padding: 20px;

  /* Added this after the tutorial to 
  show it over the wave on larger screens */
  z-index: 50;
  
  /* Added this after the tutorial to 
  make landing page responsive on laptops */
  max-height: 50vh;
}

.container {
  padding: 56px 0;
  overflow-x: hidden;
}

.books__container {
  padding: 24px 50px;
  overflow-x: hidden;
}

.row {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 24px;
}

.row__column {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.no-cursor {
  cursor: not-allowed;
}
/* 

HIGHLIGHTS 

*/

#highlights {
  position: relative;
  max-width: 100vw;
}

#highlights:after,
#highlights:before {
  background: url("./assets/wave.svg");
  content: "";
  position: absolute;
  width: 100vw;
  height: 12vw;
  left: 0;
  z-index: 1;
  background-size: cover;
  background-repeat: no-repeat;
}

#highlights:before {
  transform: translateY(-100%);
  top: 1px;
}

#highlights:after {
  transform: translateY(100%) rotate(180deg);
  bottom: 1px;
}

.highlight__wrapper {
  display: flex;
  flex-wrap: wrap;
}

.highlight {
  padding: 0 24px;
  width: calc(100% / 3);
  display: flex;
  align-items: center;
  flex-direction: column;
}

.highlight__para {
  text-align: center;
  max-width: 280px;
}

.highlight__img {
  border: 2px solid #7342d65d;
  color: #7342d6;
  width: 100px;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 4px;
  font-size: 32px;
  margin-bottom: 24px;
}

.highlight__subtitle {
  font-size: 20px;
  margin-bottom: 16px;
  text-align: center;
}

/* 

FEATURES 

*/

#features {
  padding-top: 8vw;
  background-color: rgba(115, 66, 214, 0.1);
}

.books {
  display: flex;
  flex-wrap: wrap;
  margin: 0 -24px;
}

.book {
  width: 25%;
  padding: 24px;
  transition: all 300ms ease;
}

.book:hover {
  transform: translateY(-4px);
}

.book__img {
  max-height: 320px;
  max-width: 250px;
  transition: all 300ms ease;
}

.book__img--skeleton {
  width: 100%;
  max-width: 250px;
  height: 320px;
  background-color: rgb(204, 204, 204);
  margin-bottom: 8px;
}

.skeleton {
  background-color: rgb(227, 227, 227) !important;
  margin-bottom: 8px;
}

.book__title--skeleton {
  height: 21px;
  width: 100%;
}

.book__rating--skeleton {
  width: 100px;
  height: 19px;
}

.book__price--skeleton {
  width : 200px;
  height: 19px;
}

.book__link {
  color: #242424;
}

.book__img--wrapper {
  margin-bottom: 8px;
  border-radius: 4px;
  overflow: hidden;
  display: flex;
}

.book__title {
  font-size: 20px;
  margin-bottom: 8px;
}

.book__title--link {
  color: #242424;
}

.book__ratings {
  margin-bottom: 8px;
  color: #fabf2a;
}

.book__price--normal {
  text-decoration: line-through;
  padding-right: 6px;
  color: #bfbfbf;
}

/* 

EXPLORE

*/

#explore {
  background-color: rgba(115, 66, 214, 0.1);
}

.container__explore {
  margin-top: -50px;
  overflow-x: hidden;
}

/* 

FOOTER

*/

footer {
  background-color: #242424;
}

.footer__logo {
  display: flex;
  padding-bottom: 10px;
}

.footer__logo--img {
  width: 160px;
  filter: grayscale(1) invert(1);
  transform: translateY(13px);
}

.footer__container {
  padding: 30px 0;
  overflow-x: hidden;
}

.footer__link,
.footer__copyright {
  color: #fff;
}

.footer__copyright {
    transform: translateY(-12px);
}

.footer__list {
  margin: 20px 0 34px 0;
}

.footer__link {
  padding: 0 8px;
}

/* 
**

BOOKS PAGE

**
*/

#books__body {
  background-color: rgba(115, 66, 214, 0.1);
  flex: 1;
  display: flex;
  flex-direction: column;
}

#books__main {
  flex: 1;
  background-color: rgb(248,249,250);
}

.books__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 24px;
}

.books__header--title {
  margin-bottom: 0;
}

select {
  background-color: #fff;
  border-radius: 4px;
  border: 1px solid #dcdfe6;
  color: #606266;
  height: 40px;
  line-height: 40px;
  outline: none;
  padding: 0 14px;
  width: 100%;
  max-width: 200px;
}

#filter {
  appearance: none;
  -webkit-appearance: none;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-position: right 0px center;
  padding-right: 30px;
}

.books__loading {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 60px;
  font-size: 60px;
  color: #7342d6;
}

.fa-spinner {
  animation: rotate 600ms infinite linear;
}

@keyframes rotate {
  0% {
    transform: rotate(0);
  }

  100% {
    transform: rotate(360deg);
  }
}
/* ... */

